HIVE-29400: Execute Hive Iceberg test-suite agains V3 format (#6263)